optimize and clean code